--- a/SEA_Application/Views/Shared/_ReceptionistDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_ReceptionistDashboardLayout.cshtml
@@ -140,9 +140,60 @@
                     </li>
 
 
+
+                    <li id="SuppliersReceptionist" class="nav-item">
+                        <a href="@Url.Action("Index", "Suppliers" )" class="nav-link nav-toggle">
+                            <i class="fal fa-users">
+
+                            </i>
+                            <p>Suppliers</p>
+                        </a>
+                    </li>
+
+
+                    <li id="InventoryCategoryReceptionist" class="nav-item">
+                        <a href="@Url.Action("Index", "InventoryCategories" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Inventory Category</p>
+                        </a>
+                    </li>
+
+
+                    <li id="InventoryReceptionist" class="nav-item">
+                        <a href="@Url.Action("Inventory", "Inventory" )" class="nav-link nav-toggle">
+                            <i class=" fal  fas fa-inventory">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+
+                            </i>
+                            <p>Inventory</p>
+                        </a>
+                    </li>
+
+
+                    <li id="PurchaseOrdersReceptionist" class="nav-item">
+                        <a href="@Url.Action("PurchaseOrdersList", "Inventory" )" class="nav-link nav-toggle">
+                            <i class="fal fa-shopping-cart">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+
+                            </i>
+                            <p>Purchase Orders</p>
+                        </a>
+                    </li>
+
+
+                    <li id="ReceptionPhotoCopierSummary" class="nav-item">
+
+                        <a href="@Url.Action("Dashboard", "PhotoCopier_Dashboard" )" class="nav-link nav-toggle">
+                            <i class="fal fa-books"></i>
+                            <p>PhotoCopier Summary</p>
+                        </a>
+                    </li>
+
                     @*
                     <li class="nav-item">
-                        <a href="@(Url.Action("Index", "AspNetFeeDetail" ))" class="nav-link nav-toggle">
+                        <a href="@(Url.Action(" Index", "AspNetFeeDetail" ))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
                             </i>
