--- a/SEA_Application/Views/Inventory/Create.cshtml
+++ b/SEA_Application/Views/Inventory/Create.cshtml
@@ -1,9 +1,20 @@
 ﻿@model SEA_Application.Models.Inventory
-@{
-    ViewBag.Title = "Create";
+
+@if (User.IsInRole("Admin"))
+{
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
+else if (User.IsInRole("Receptionist"))
+{
+    Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
+
+}
+else
+{
+    Layout = null;
+
+}
 
 <div class="card">
     <div class="card-body p-4">
@@ -12,125 +23,125 @@
         {
             @Html.AntiForgeryToken()
 
-        <div class="col-md-8">
+            <div class="col-md-8">
 
-            <input type="hidden" id="InventoryType" name="InventoryType" value="@ViewBag.InventoryType" />
+                <input type="hidden" id="InventoryType" name="InventoryType" value="@ViewBag.InventoryType" />
 
-            <div class="form-group">
-                <div class="col-md-12">
+                <div class="form-group">
+                    <div class="col-md-12">
 
-                    <label class="control-label">Product No</label>
+                        <label class="control-label">Product No</label>
 
-                    @*@Html.EditorFor(model => model.ProductNo, new { htmlAttributes = new { @class = "form-control", @required = true } })*@
+                        @*@Html.EditorFor(model => model.ProductNo, new { htmlAttributes = new { @class = "form-control", @required = true } })*@
 
 
-                    <input type="number" min="1" name="ItemNo" value="@ViewBag.ItemNo" class="form-control" />
+                        <input type="number" min="1" name="ItemNo" value="@ViewBag.ItemNo" class="form-control" />
 
-                    @Html.ValidationMessageFor(model => model.ItemNo, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.ItemNo, "", new { @class = "text-danger" })
 
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-12">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label " })
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label " })
 
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
 
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-12">
+                <div class="form-group">
+                    <div class="col-md-12">
 
-                    <label class="control-label">Unit Name</label>
+                        <label class="control-label">Unit Name</label>
 
-                    @Html.EditorFor(model => model.UnitName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UnitName, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.UnitName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.UnitName, "", new { @class = "text-danger" })
 
+                    </div>
                 </div>
-            </div>
 
 
-            <div class="form-group">
-                <div class="col-md-12">
+                <div class="form-group">
+                    <div class="col-md-12">
 
-                    <label class="control-label">Unit Sale Price </label>
+                        <label class="control-label">Unit Sale Price </label>
 
-                    @*@Html.EditorFor(model => model.UnitSalePrice, new { htmlAttributes = new { @value = "0", type = "number", min = "0", @class = "form-control", @required = true } })*@
+                        @*@Html.EditorFor(model => model.UnitSalePrice, new { htmlAttributes = new { @value = "0", type = "number", min = "0", @class = "form-control", @required = true } })*@
 
 
-                    <input type="number" id="UnitSalePrice" name="UnitSalePrice" value="0" min="0" class="form-control"  />
+                        <input type="number" id="UnitSalePrice" name="UnitSalePrice" value="0" min="0" class="form-control" />
 
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-12">
+                <div class="form-group">
+                    <div class="col-md-12">
 
-                    <label class="control-label">Select Category</label>
+                        <label class="control-label">Select Category</label>
 
-                    <select class="form-control" id="CategoryId" name="CategoryId" required></select>
+                        <select class="form-control" id="CategoryId" name="CategoryId" required></select>
 
 
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-12">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label " })
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label " })
 
-                    <textarea class="form-control" name="Description" id="Description" rows="5"></textarea>
+                        <textarea class="form-control" name="Description" id="Description" rows="5"></textarea>
 
 
+                    </div>
                 </div>
-            </div>
 
 
-            <div class="form-group" style="display:none">
-                <div class="col-md-12">
+                <div class="form-group" style="display:none">
+                    <div class="col-md-12">
 
-                    <label class="control-label"> Select Type</label>
+                        <label class="control-label"> Select Type</label>
 
 
-                    <select readonly class="form-control" id="Type" name="Type">
+                        <select readonly class="form-control" id="Type" name="Type">
 
-                        <option value="">Select One</option>
-                        <option value="RawProduct">Raw Product</option>
-                        <option value="ExternalProduct">External Product </option>
-                        <option value="ProductProduction">Product Production</option>
-                    </select>
+                            <option value="">Select One</option>
+                            <option value="RawProduct">Raw Product</option>
+                            <option value="ExternalProduct">External Product </option>
+                            <option value="ProductProduction">Product Production</option>
+                        </select>
 
-                    <br />
+                        <br />
 
-                    <span style="color:red;">@ViewBag.Error</span>
+                        <span style="color:red;">@ViewBag.Error</span>
 
+                    </div>
                 </div>
-            </div>
 
-            @*<input type="hidden" name="UnitSalePrice" value="0" />*@
-            <input type="hidden" name="UnitPurchasePrice" value="0" />
-            <input type="hidden" name="QuantityOnHand" value="0" />
-
+                @*<input type="hidden" name="UnitSalePrice" value="0" />*@
+                <input type="hidden" name="UnitPurchasePrice" value="0" />
+                <input type="hidden" name="QuantityOnHand" value="0" />
 
 
 
-            <div class="form-group">
-                <div class=" col-md-12">
-                    <input type="submit" value="Save" class="btn btn-primary rounded rounded-lg" />
 
-                    <button type="button" id="cancel" onclick="redirect()" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                        <i class="material-icons mr-2">cached</i>  Cancel
-                    </button>
+                <div class="form-group">
+                    <div class=" col-md-12">
+                        <input type="submit" value="Save" class="btn btn-primary rounded rounded-lg" />
+
+                        <button type="button" id="cancel" onclick="redirect()" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                            <i class="material-icons mr-2">cached</i>  Cancel
+                        </button>
+                    </div>
                 </div>
+
+
+
+
+
             </div>
-
-
-
-
-
-        </div>
 
 
         }
@@ -149,7 +160,7 @@
 
         var InventoryType = $("#InventoryType").val();
 
-       // alert(InventoryType);
+        // alert(InventoryType);
 
         $('#Type').val(InventoryType);
 
