--- a/SEA_Application/Views/InventoryCategories/Create.cshtml
+++ b/SEA_Application/Views/InventoryCategories/Create.cshtml
@@ -1,10 +1,20 @@
 ﻿@model SEA_Application.Models.InventoryCategory
 
-@{
-    ViewBag.Title = "Create";
+@if (User.IsInRole("Admin"))
+{
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
+else if (User.IsInRole("Receptionist"))
+{
+    Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
+
+}
+else
+{
+    Layout = null;
+
+}
 
 <div class="card">
     <div class="card-body p-4">
@@ -27,28 +37,28 @@
 
                 </div>
 
-              
-
-                    <div class="form-group">
-                     
-                            <button type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
 
 
-                            <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                                <i class="material-icons mr-2">cached</i>  Cancel
-                            </button>
+                <div class="form-group">
 
-                      
-                    </div>
+                    <button type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
 
-                
+
+                    <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <i class="material-icons mr-2">cached</i>  Cancel
+                    </button>
+
+
+                </div>
+
+
             }
 
 
         </div>
 
     </div>
-    </div>
+</div>
 
 <script>
 
