--- a/SEA_Application/Views/InventoryCategories/Edit.cshtml
+++ b/SEA_Application/Views/InventoryCategories/Edit.cshtml
@@ -1,11 +1,20 @@
 ﻿@model SEA_Application.Models.InventoryCategory
 
-@{
-    ViewBag.Title = "Edit";
+@if (User.IsInRole("Admin"))
+{
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
+else if (User.IsInRole("Receptionist"))
+{
+    Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
 
+}
+else
+{
+    Layout = null;
+
+}
 
 <div class="card">
     <div class="card-body p-4">
